--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@radix-ui/react-select": "^2.1.6",
     "@reduxjs/toolkit": "^2.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "next": "15.1.7",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
